.. currentmodule:: netaddr

--------------------
NEXT_NETADDR_VERSION
--------------------

Date: not released yet

Removed:

* Drop support for Python versions lower than 3.7.
* Remove the flag shorthands: ``N``, ``P`` and ``Z``. Use :data:`NOHOST`, :data:`INET_PTON`
  and :data:`ZEROFILL` instead.

Changed:

* Stop accepting leading zeros when parsing IPv4 addresses in :data:`INET_PTON` mode
  (it's been allowed on some platforms).

  If you need to allow and discard leading zeros use the :data:`ZEROFILL` flag.

  This change will implicit conversions from ``str`` in all relevant contexts. If you need
  to control the IPv4 parsing mode construct :class:`IPAddress` objects explicitly.
* Stop parsing IPv4 addresses permissively (``inet_aton()``-like) by default.

  :data:`INET_PTON` is the default mode.

  If you need to be permissive and parse using ``inet_aton()`` semantics use the
  :data:`INET_ATON` flag.

  This change will affect implicit conversions from ``str`` in all relevant contexts. If you
  need to control the IPv4 parsing mode construct :class:`IPAddress` objects explicitly.

---------------
Release: 0.10.1
---------------

Date: 2024-01-02

Fixed:

* Get rid of some warnings

Deprecated:

* Deprecate the flag shorthands: ``N``, ``P`` and ``Z``. Use :data:`NOHOST`, :data:`INET_PTON`
  and :data:`ZEROFILL` instead.
* Deprecate importing objects from ``netaddr`` subpackages. Only importing things from the
  top-level ``netaddr`` namespace is supported, everything else is considered private.

  This has already been the case but we can use a reminder.
* Deprecate permissive-by-default IPv4 parsing in :func:`valid_ipv4`. The ``inet_pton()``
  semantics (with leading zeros always disallowed) will become the default. Use :data:`INET_ATON`
  and/or :data:`ZEROFILL` flags if you need the legacy behavior.

---------------
Release: 0.10.0
---------------

Date: 2023-12-31

Added:
